# XunDuTerminal

./: .env.sandbox  .gitignore  .oxlintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  Run-XunDuTerminal.cmd  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Skin/: README.md  schema.json
Skin/aurora-glass/: skin.json
Skin/dream/: skin.json
Skin/ember-noir/: skin.json
Skin/forest-signal/: skin.json
Skin/midnight-ink/: skin.json
Skin/paper-frost/: skin.json
Skin/sakura-mist/: skin.json
Skin/xundu-default/: skin.json
deploy/xunduterminal/: latest.json
docs/: PHASE2_PLAN.md  RELEASING.md  REMOTE_DESKTOP.md  SECURITY_ARCHITECTURE.md  UPDATES.md  WAVE_STYLE_BACKEND_REFACTOR.md
src/: App.tsx  RemoteDesktopWidget.tsx  credentialVault.ts  i18n.ts  index.css  interface.css  ironRdpBridge.ts  layoutTree.ts  main.tsx  operationsStore.ts  skins.ts  tauriBridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: credential_store.rs  iron_rdp.rs  lib.rs
tools/: phase2-stress.mjs  sandbox-smoke.mjs
tools/perf-sandbox/: go-broker-sim.go
