[package]
name = "app"
version = "0.2.0"
description = "面向 Windows 的开源服务器工作台，集成 SSH、文件管理、监控、进程与远程桌面"
authors = ["XunDuTerminal Contributors"]
license = "MIT"
repository = "https://github.com/KaiGe7384/XunDuTerminal"
homepage = "https://github.com/KaiGe7384/XunDuTerminal"
edition = "2021"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
ssh2 = "0.9"
sysinfo = "0.33"
portable-pty = "0.8"
rfd = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
ironrdp-client = { version = "0.1.0", features = ["native-tls", "clipboard"] }
ironrdp = { version = "0.17.0", features = ["input"] }
ironrdp-cliprdr = "0.7.0"
ironrdp-cliprdr-native = "0.7.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WNet",
  "Win32_Security_Credentials",
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[patch.crates-io]
ironrdp-cliprdr-native = { path = "vendor/ironrdp-cliprdr-native" }
